[gd_scene load_steps=6 format=1]

[ext_resource path="res://Kontroloj/Agordoj.gd" type="Script" id=1]
[ext_resource path="res://Tiparoj/jomhuria.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Temoj/Butono_sxveba.tres" type="StyleBox" id=3]
[ext_resource path="res://Temoj/Butono_premita.tres" type="StyleBox" id=4]
[ext_resource path="res://Temoj/Butono.tres" type="StyleBox" id=5]

[node name="Agordoj" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 760.0
margin/bottom = 1160.0
script/script = ExtResource( 1 )

[node name="Sonoj" type="CheckButton" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 75.0
margin/right = 400.0
margin/bottom = 175.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Sonoj"
flat = false
align = 0

[node name="Muzikoj" type="CheckButton" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 325.0
margin/right = 400.0
margin/bottom = 425.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Muzikoj"
flat = false
align = 0

[node name="ShowFPS" type="CheckButton" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 575.0
margin/right = 402.0
margin/bottom = 675.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Show FPS"
flat = false
align = 0

[node name="Reen" type="Button" parent="."]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -130.0
margin/top = -910.0
margin/right = -630.0
margin/bottom = -1060.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Reen"
flat = false

[connection signal="toggled" from="Sonoj" to="." method="_on_Sonoj_toggled"]

[connection signal="toggled" from="Muzikoj" to="." method="_on_Muzikoj_toggled"]

[connection signal="toggled" from="ShowFPS" to="." method="_on_ShowFPS_toggled"]

[connection signal="pressed" from="Reen" to="." method="_on_Reen_pressed"]


